--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "moment": "^2.30.1",
+    "mongoose": "^8.4.1",
     "mysql2": "^3.10.1",
     "nodemon": "^3.1.0",
     "request": "^2.88.2"
